Fixed crash when merging announce lists of torrents

BUG: 134079


svn path=/trunk/extragear/network/ktorrent/; revision=584817